changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix incorrect check in test/bugs/bugtrack/check_2879249.c.
Arvid Norlander 2010-10-10

Fix bug that caused server to sometimes crash on account login.
Arvid Norlander 2010-10-10

Give access to 'cost_string_from_value' to the Python plugin.
Nicolas Weeger 2010-10-10

Use all coin types when displaying prices.
Nicolas Weeger 2010-10-10

Do not make symbols globally visible by default on *nix (when supported),
on Windows this is always the case. To prevent hidden errors (since most
developers seem to test on *nix), use -fvisibility=hidden when GCC is used
and make the MODULEAPI and CF_PLUGIN macros use __attribute__ to mark those
as visible. This will not break on any compiler not supporting this, but will
prevent future hidden errors of this type.
A further advantage with this is that it reduces risk of symbol name collision
between various dynamic objects.
Arvid Norlander 2010-10-09

Add missing CF_PLUGIN in cflogger. This would only fail on Windows since by
default on *nix, all symbols are exported. Thus this error went unnoticed
until I tried with -fvisibility=hidden and setting the MODULEAPI and CF_PLUGIN
macros use __attribute__((visibility("default"))...
Arvid Norlander 2010-10-09

Fix some serious compiler warnings (missing declaration of function, fixed by
adding an #include; wrong type for argument to snprintf, fixed by changing to
use the proper variable) in the test suites.
Arvid Norlander 2010-10-08

Fix case where a size_t* and an int* were confused. On my system that
resulted in rare data corruption sometimes when the function in question
was called.