@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Change from using memory.h to using string.h, include memory.h as well
+but make use of the check for it we already have in configure... That
+header shouldn't be needed, but who knows... Also Update the output of
+the -o flag to be more relevant...
+Arvid Norlander 2010-10-10
+
 Fix incorrect check in test/bugs/bugtrack/check_2879249.c.
 Arvid Norlander 2010-10-10
 
